* Fixes issue in `StringValue::ToArray` transform where delim=nil was not correctly being calculated (PR#145)
* Fixes https://github.com/lyrasis/kiba-extend/issues/152[#152]: Fingerprint::Decode error: Encoding::CompatibilityError: incompatible character encodings: ASCII-8BIT and UTF-8 (PR#153)

=== Deleted

=== Deprecated/Will break in a future version
* `sep` parameter will be replaced by `delim` in `CombineValues::FromFieldWithDelimiter` and `CombineValues::FullRecord` (PR#147)

=== Dev
* Adds `Kiba::Extend::ErrMod` module to be included into `Kiba::Extend`-specific error classes. This allows us to subclass each application-specific error to the semantically appropriate Ruby exception class, while retaining the ability to identify/scope/rescue only application-specific errors. (PR#138)
* Add `:info` method to `Kiba::Extend::ErrMod` module, to print error type, message, and backtrace to STDOUT in a consistent way. (PR#141)

== Releases

=== 3.3.0 - 2023-02-17

==== Added
* `StringValue::ToArray` transform (PR#111)
* Two mixin modules to Transforms to support deprecating non-preferred parameter signatures:
** `Transforms::SepDeprecatable` (PR#124)
** `Transforms::MultivalPlusDelimDeprecatable` (PR#124)
* `Utils::StringNormalizer` service class (PR#124)
* `ignore_case` and `normalized` parameters for `Deduplicate::GroupedFieldValues` (PR#124)
* Options to `Clean::StripFields` transform (PR#129):
** Ability to pass `fields: :all` to strip all fields in a table
** Ability to turn on multivalue processing by passing in a `delim` value
* More country mappings to `Cspace::AddressCountry` transform (PR#132)
* `Marc` source, `MarcJob`, `Kiba::Extend::Marc` configuration module, `Utils::MarcIdExtractor`, and an initial `Marc::Extract245Title` transform (PR#134)

==== Bugfixes
* Catch `Merge::MultiRowLookup` transform created with empty `fieldmap` and raise error on initialization, rather than letting it blow up `Utils::Fieldset` later (PR#127)